[package]
name = "wowswap"
version = "0.1.0"
description = "Wowswap Solana Program"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "wowswap"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["no-idl"]

[dependencies]
anchor-lang = "0.17.0"
serum_dex = { git = "https://github.com/project-serum/serum-dex", rev = "1be91f2", features = ["no-entrypoint"] } # 0.4.0
solana-program = "=1.7.11"
spl-associated-token-account = { version = "=1.0", features = ["no-entrypoint"] }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
